[gd_scene load_steps=4 format=3 uid="uid://cwmqw1na65rbf"]

[ext_resource type="Script" path="res://Scenes/GameScenes/FishingMiniGame/MiniGameReward/TreasureReward/v_box_container.gd" id="1_3iwlm"]
[ext_resource type="Script" path="res://Scenes/GameScenes/FishingMiniGame/MiniGameReward/TreasureReward/treasure_reward.gd" id="1_yf776"]
[ext_resource type="Texture2D" uid="uid://t2sy43nmob0k" path="res://Assets/2D/TreasureChest.png" id="2_1clvj"]

[node name="TreasureReward" type="Control"]
auto_translate_mode = 1
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_yf776")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1284.0
offset_bottom = 879.0
script = ExtResource("1_3iwlm")

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "You fished up treasure!"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(141, 100)
layout_mode = 2
texture = ExtResource("2_1clvj")
expand_mode = 5
stretch_mode = 4

[node name="GetSpecialChest" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Unlock Chest (Question)"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer2"]
auto_translate_mode = 1
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(141, 100)
layout_mode = 2
texture = ExtResource("2_1clvj")
expand_mode = 5
stretch_mode = 4

[node name="GetNormalChest" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Open Chest"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "You got 0 gold, 0 pearls, and 0 Superworms!"
horizontal_alignment = 1

[node name="Continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Continue"

[connection signal="button_down" from="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/GetSpecialChest" to="." method="_on_get_special_chest_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer/GetNormalChest" to="." method="_on_get_normal_chest_button_down"]
[connection signal="button_down" from="VBoxContainer/Continue" to="." method="_on_continue_button_down"]
